update with photo

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">g
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Family Christmas Website</title>
@@ -10,6 +10,10 @@
 <body>
     <h1>Family Christmas Website for the Scalzitti and Carso Family and Children</h1>
     <h2>Other Information to Come</h2>
+    <hr>
+        <h3>
+        <img src="https://scontent.feau1-1.fna.fbcdn.net/v/t1.6435-9/46452289_10214415440513926_2839029792756465664_n.jpg?_nc_cat=106&ccb=1-7&_nc_sid=730e14&_nc_ohc=ZiZUujyWFPcAX-4z1jT&_nc_ht=scontent.feau1-1.fna&oh=00_AfBDdt3Cz7tCL5MMpA3jgeBctNq-JNvsn-cSTPyPESBvbQ&oe=63D1B80F" alt="Family Photo">
+        </h3>
     <div>
         <button>Submit</button>
     </div>
