--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           <p>Please fill in this form to participate in the Secret Santa this year.</p>
           <hr>
           <label for="first_name"><b>First Name</b></label>
-          <input type="text" placeholder="Enter First Name" name="first_name" required>
+          <input type="text" placeholder="Enter First Name" name="first_name" required style="margin-bottom:15px">
           
           <label for="last_name"><b>Last Name</b></label>
           <input type="text" placeholder="Enter Last Name" name="last_name" required>
